Fix spacing in hero block

--- a/styles.css
+++ b/styles.css
@@ -69,10 +69,16 @@ body {
 
 h1 {
     margin: 0px;
+    padding: 0px;
+    font-size: 31px;
     font-family: "Chilanka";
+}
+p {
+    margin: 4px 0px;
 }
 
 button {
+    margin-top: 20px;;
     padding: 8px 32px;
     border: 0px;
     border-radius: 20px;
